Revision history for File::DataClass

          - Refactored extension to storage class mapping
          - Fixed requiring Cwd in ::IO

0.30.1    2014-01-02 02:31:15
          - Skipped stale cache test on NTFS

0.29.1    2014-01-01 17:01:42
          - Fixed regex where clause matching
          - Fixed hash order bug in tests

0.28.1    2014-01-01 14:52:36
          - Define and use exception classes
          - Split out Storage::XML to own distribution
          - Made spell checking work with utf8
          - Simplified Build.PL. Updated test boilerplate
          - Uses DZ::P::AbstractFromPOD and LicenseFromModule
          - Dropped dependency on Class::Load

0.27.1    2013-11-22 09:40:23
          - Bumped Unexpected dependency to v0.15
          - ::IO::rel2abs stringifies the base arg
          - Updated git hooks

0.26.1    2013-09-26 17:02:33
          - Increased test coverage

0.25.1    2013-09-03 12:57:12
          - Bumped Unexpected version

0.24.3    2013-08-16 23:45:37
          - Updated toolchain
          - Converted to dist.ini. Dropped XML::DTD

0.23.2    2013-08-07 14:12:19
          - Reset min perl testing to original behaviour
          - POD updates

0.22.9    2013-08-02 20:04:28
          - Updated toolchain
          - Fixed no symlink support test skipping
          - New method for CPANTesting min Perl ver
          - Skip more tests on windows
          - Added fremen and frogman to tier gruber
          - Aborting Bingoes failed see df276fba-f57c-11e2-8c80-50d7c5c10595
            No choice but to send this smoker to sleep 10 while 1.
            Chris Williams, put my pause id in your stop list
          - Added missing dependency on MooX::ClassStash
          - Fixed unwanted Moose loading in ::Result
          - Depends on Moo version of CHI

0.21.29   2013-07-28 14:58:25
          - Fixed precedence bug in ::ResultSouce::has_column
          - ::IO parent takes an optional count
          - Lazy load CHI. Added reset to ::IO