@@ -1,4 +1,4 @@
-; @(#)$Ident: dist.ini 2014-01-01 01:22 pjf ;
+; @(#)$Ident: dist.ini 2014-01-13 13:10 pjf ;
 
 name = File-DataClass
 
@@ -6,7 +6,7 @@ name = File-DataClass
 perl              = 5.010001
 namespace::clean  = 0.23
 namespace::sweep  = 0.006
-Cache::FastMmap   = 1.36
+Cache::FastMmap   = 1.40
 CHI               = 0.58
 Class::Method::ModifiersX::Augment = 0.001
 Class::Null       = 2.101420
