@@ -1,8 +1,8 @@
-# @(#)Ident: 07podspelling.t 2013-12-15 20:26 pjf ;
+# @(#)Ident: 07podspelling.t 2014-01-12 21:08 pjf ;
 
 use strict;
 use warnings;
-use version; our $VERSION = qv( sprintf '0.30.%d', q$Rev: 1 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.30.%d', q$Rev: 3 $ =~ /\d+/gmx );
 use File::Spec::Functions   qw( catdir catfile updir );
 use FindBin                 qw( $Bin );
 use lib                 catdir( $Bin, updir, 'lib' );
@@ -95,6 +95,7 @@ rmtree
 splitdir
 splitpath
 stacktrace
+stateful
 stringifies
 subdirectories
 utf
